<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="#EDEDED"
    tools:context=".TaskActivity">

    <EditText
        android:id="@+id/edtTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/TitleText"
        android:textAlignment="center"
        android:background="#FFFFFF"
        android:padding="8dp"
        android:layout_marginBottom="10dp"/>

    <EditText
        android:id="@+id/edtDescription"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:hint="@string/DescText"
        android:textAlignment="center"
        android:background="#FFFFFF"
        android:padding="8dp"
        android:layout_marginBottom="10dp" />

    <TextView
        android:id="@+id/txtNoTitleMSG"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/ErrorMsgTextView"
        android:textAlignment="center"
        android:textColor="#F40F0F"
        android:textSize="18sp"
        android:textStyle="bold"
        android:visibility="gone"
        android:layout_marginBottom="10dp" />

    <Button
        android:id="@+id/btDelete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/DeleteText"
        android:layout_marginBottom="10dp"/>

    <Button
        android:id="@+id/btSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/SaveText"
        android:layout_marginBottom="10dp"/>

    <CheckBox
        android:id="@+id/chkStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:text="@string/CompletedText" />

</androidx.appcompat.widget.LinearLayoutCompat>
