<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="#EDEDED"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/txtTasks"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/tasksTextView"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="#333333"
        android:layout_marginBottom="10dp"/>

    <ListView
        android:id="@+id/listTasks"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="#FFFFFF"
        android:layout_marginTop="10dp"
        android:divider="#CCCCCC"
        android:dividerHeight="1dp"
        android:visibility="gone" />

    <TextView
        android:id="@+id/txtNoTaskMSG"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:text="@string/NoTasksTextView"
        android:textSize="18sp"
        android:textStyle="bold"
        android:visibility="gone" />

    <EditText
        android:id="@+id/edtTask"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:hint="@string/AddTaskText"
        android:textAlignment="center"
        android:background="#FFFFFF"
        android:padding="8dp"/>

    <TextView
        android:id="@+id/txtErrorMSG"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/ErrorMsgTextView"
        android:textAlignment="center"
        android:textColor="#F40F0F"
        android:textSize="18sp"
        android:textStyle="bold"
        android:visibility="gone"
        android:layout_marginTop="10dp" />

    <Button
        android:id="@+id/btQuickAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center"
        android:layout_marginTop="10dp"
        android:text="@string/QuickAddButton"
        android:textColorLink="#ff6750a4" />

    <Button
        android:id="@+id/btCreateTask"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center"
        android:layout_marginTop="10dp"
        android:text="@string/CreateTaskButton"/>
</androidx.appcompat.widget.LinearLayoutCompat>
